fix: column alignment fixed

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -191,7 +191,6 @@
 
         &-wrapper {
             width: 100%;
-            overflow: hidden;
             border-radius: 8px;
             background: var(--bt-base-bg);
             border: 1px solid var(--bt-border-color);
